# raytracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.json
images/: 5_256reflections.ppm  6_16steps.ppm  6_256steps.ppm  6_4steps.ppm  6_64steps.ppm  7.ppm
src/: Camera.cpp  Camera.h  IO.cpp  IO.h  IObject.h  Main.cpp  Object.h  Vector.cpp  Vector.h  Window.cpp  Window.h  kernel.cl
src/Objects/: Cube.cpp  Cube.h  Sphere.cpp  Sphere.h
